examples/test/testpolicy17515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17515
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key37: value34
      key32: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value10
          key24: value2
      podSelector:
        matchLabels:
          key2: value42
          key21: value40
